Global instances - to hold all instances that must be shared globally, yet support testing Refactored existing global instances to use it