@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2022, 2023 Oracle and/or its affiliates.
+ * Copyright (c) 2022, 2024 Oracle and/or its affiliates.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -19,7 +19,6 @@ package io.helidon.common.config;
 import java.util.List;
 import java.util.Objects;
 import java.util.ServiceLoader;
-import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.Supplier;
 
 import io.helidon.common.HelidonServiceLoader;
@@ -35,9 +34,10 @@ import io.helidon.common.config.spi.ConfigProvider;
  * <p>
  * You may still use custom instances of configuration when using configurable APIs directly.
  */
+@SuppressWarnings("removal")
 public final class GlobalConfig {
     private static final Config EMPTY = Config.empty();
-    private static final LazyValue<Config> DEFAULT_CONFIG = LazyValue.create(() -> {
+    private static final Supplier<Config> CONFIG_SUPPLIER = () -> {
         List<ConfigProvider> providers = HelidonServiceLoader.create(ServiceLoader.load(ConfigProvider.class))
                 .asList();
         // no implementations available, use empty configuration
@@ -45,10 +45,11 @@ public final class GlobalConfig {
             return EMPTY;
         }
         // there is a valid provider, let's use its default configuration
-        return providers.get(0)
+        return providers.getFirst()
                 .create();
-    });
-    private static final AtomicReference<Config> CONFIG = new AtomicReference<>();
+    };
+
+    private static final LazyValue<Config> DEFAULT_CONFIG = LazyValue.create(CONFIG_SUPPLIER);
 
     private GlobalConfig() {
     }
@@ -59,7 +60,7 @@ public final class GlobalConfig {
      * @return {@code true} if there is a global configuration set already, {@code false} otherwise
      */
     public static boolean configured() {
-        return CONFIG.get() != null;
+        return io.helidon.common.GlobalInstances.current(GlobalConfigHolder.class).isPresent();
     }
 
     /**
@@ -70,7 +71,9 @@ public final class GlobalConfig {
      * @see #config(java.util.function.Supplier, boolean)
      */
     public static Config config() {
-        return configured() ? CONFIG.get() : DEFAULT_CONFIG.get();
+        return io.helidon.common.GlobalInstances.current(GlobalConfigHolder.class)
+                .map(GlobalConfigHolder::config)
+                .orElseGet(DEFAULT_CONFIG);
     }
 
     /**
@@ -86,7 +89,7 @@ public final class GlobalConfig {
     /**
      * Set global configuration.
      *
-     * @param config configuration to use
+     * @param config    configuration to use
      * @param overwrite whether to overwrite an existing configured value
      * @return current global config
      */
@@ -96,8 +99,22 @@ public final class GlobalConfig {
         if (overwrite || !configured()) {
             // there is a certain risk we may do this twice, if two components try to set global config in parallel.
             // as the result was already unclear (as order matters), we do not need to be 100% thread safe here
-            CONFIG.set(config.get());
+            Config configInstance = config.get();
+            io.helidon.common.GlobalInstances.set(GlobalConfigHolder.class, new GlobalConfigHolder(configInstance));
+            return configInstance;
         }
-        return CONFIG.get();
+        return io.helidon.common.GlobalInstances.get(GlobalConfigHolder.class, () -> new GlobalConfigHolder(config.get()))
+                .config();
+    }
+
+    static Config create() {
+        return CONFIG_SUPPLIER.get();
+    }
+
+    @SuppressWarnings("removal")
+    private record GlobalConfigHolder(Config config) implements io.helidon.common.GlobalInstances.GlobalInstance {
+        @Override
+        public void close() {
+        }
     }
 }
